--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <div class='col-md-12 col-sm-12 col-xs-12'>
                 <p class='h4 font-weight-bold '>Acknowledgements</p>
                 <p>
-                    We thank Noriyuki Kojima and Gabriel Stanovsky for their helpful feedback.
+                    We thank Noriyuki Kojima, Gabriel Stanovsky, and Adi Haviv for their helpful feedback.
                 </p>
             </div>
         </div>
